hphp/hack/test/typecheck/reactive/reactive_inc_dec.php.coeffects.exp
File "reactive_inc_dec.php", line 7, characters 3-9:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "reactive_inc_dec.php", line 5, characters 14-15:
  The local (enclosing) context provides the capability set {}
File "reactive_inc_dec.php", line 8, characters 5-11:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "reactive_inc_dec.php", line 5, characters 14-15:
  The local (enclosing) context provides the capability set {}
File "reactive_inc_dec.php", line 9, characters 3-9:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "reactive_inc_dec.php", line 5, characters 14-15:
  The local (enclosing) context provides the capability set {}
File "reactive_inc_dec.php", line 10, characters 5-11:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "reactive_inc_dec.php", line 5, characters 14-15:
  The local (enclosing) context provides the capability set {}
